<resources>
    <string name="app_name">MedicAlert</string>
    <string name="register">S\'inscrire ici !</string>
    <string name="login">Login</string>
    <string name="shared_preferences">sharedPrefs</string>
    <string name="tokenKey">token</string>
    <string name="emailKey">email</string>
    <string name="nextStepInscription">Choisir son aide-soignant</string>
    <string name="bonjour">Bonjour Marc Dupont !</string>
    <string name="tab_aidesoignant_1">Pharmacie</string>
    <string name="tab_aidesoignant_2">Traitements</string>
    <string name="tab_aidesoignant_3">Rendez-vous</string>
    <string name="tab_patient_1">Mes traitements</string>
    <string name="tab_patient_2">Mes rendez-vous</string>
    <string name="ajouter">Ajouter</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="cip13">cip13</string>
    <string name="nom">nom</string>
    <string name="forme_pharma">forme pharmaceutique</string>
    <string name="cip13_modif">cip13 du médicament à modifier</string>
    <string name="userId">userId</string>
    <string name="aide_soignant">Aide-soignant</string>
    <string name="idKey">id</string>
    <string name="patient">Patient : </string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="matin">Prise le matin :</string>
    <string name="apres_midi">Prise l\'après-midi :</string>
    <string name="soir">Prise le soir :</string>
    <string name="ajout_medicament">Ajouter les médicaments</string>
    <string name="dosage">dosage</string>
    <string name="date_peremption">date de péremption</string>
    <string name="finir_traitement">Finir le traitement</string>
    <string name="date_rdv">Date de rendez-vous</string>
    <string name="date_rdv_hint">Entrez une date, ex : 31/05/2018</string>
    <string name="channel_name">medicAlertNotification</string>
    <string name="channel_description">Channel for MedicAlert notifications</string>
    <string name="prise_med_counter">priseMedCounter</string>

</resources>