<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ajouter_medicament_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name" />

    <EditText
        android:id="@+id/cip_box"
        android:layout_below="@id/toolbar"
        android:inputType="number"
        android:hint="@string/cip13"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/nom_box"
        android:layout_below="@id/cip_box"
        android:inputType="text"
        android:hint="@string/nom"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/forme_pharma_box"
        android:layout_below="@id/nom_box"
        android:inputType="text"
        android:hint="@string/forme_pharma"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <Button
        android:id="@+id/add_button"
        android:layout_below="@id/forme_pharma_box"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/ajouter"
        android:textColor="@color/colorWhiteSmoke" />
</RelativeLayout>